--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "url": "https://github.com/WebKolla/rps-the-game.git"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.3",
     "grunt": "~0.4.4",
-    "grunt-autoprefixer": "^2.0.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-postcss": "^0.8.0"
   }
 }
